--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,5 +2,16 @@
   "manifest_version": 2,
   "name": "REACTionary",
   "version": "0.1",
-  "devtools_page": "./devtools/devtools-page.html"
+
+
+  "background": {
+    "scripts": ["background-scripts/background.js"]
+  },
+
+  "permissions": [
+    "<all_urls>"
+  ],
+
+  "devtools_page": "devtools/devtools-page.html"
+
 }
