--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cd build/extension && web-ext run --target chromium",
     "build": "webpack",
-    "start:dev": "webpack-dev-server"
+    "dev": "NODE_ENV=development webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,6 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "write-file-webpack-plugin": "^4.5.1"
+    "webpack-extension-reloader": "^1.1.4"
   }
 }
