--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "homepage": "https://github.com/oslabs-beta/REACTionary#readme",
   "devDependencies": {
     "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^3.5.3",
+    "sass": "^1.26.7",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-extension-reloader": "^1.1.4"
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1"
   }
 }
