--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,6 +12,8 @@
     "<all_urls>"
   ],
 
-  "devtools_page": "devtools-root.html"
+  "devtools_page": "devtools-root.html",
+
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
 
 }
