--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -20,7 +20,5 @@
 
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 
-  "permissions": ["<all_urls>"],
-
-  "devtools_page": "devtools-root.html"
+  "permissions": ["tabs", "<all_urls>"]
 }
