--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React component visualizer and performance optimizer",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "dev": "NODE_ENV=development webpack --mode=development --watch"
   },
@@ -29,6 +29,7 @@
     "webpack-extension-reloader": "^1.1.4"
   },
   "dependencies": {
+    "jest": "^26.0.1",
     "node-sass": "^4.14.1"
   }
 }
