--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/oslabs-beta/REACTionary#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.10.2",
+    "babel-jest": "^26.0.1",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
+    "jest": "^26.0.1",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
@@ -29,7 +32,6 @@
     "webpack-extension-reloader": "^1.1.4"
   },
   "dependencies": {
-    "jest": "^26.0.1",
     "node-sass": "^4.14.1"
   }
 }
