--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jest": "^26.0.1",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
