--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,11 @@
 {
   "manifest_version": 2,
-  "name": "REACTionary",
-  "version": "0.1",
+  "name": "Realize",
+  "version": "0.0.0.1",
+
+  "icons": {
+    "128": "icon128.png" 
+  },
 
   "background": {
     "scripts": ["background.js"]
@@ -18,7 +22,5 @@
 
   "devtools_page": "devtools-root.html",
 
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
-
-  "permissions": ["activeTab", "tabs", "<all_urls>"]
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
 }
