--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,20 +7,21 @@
     "128": "icon128.png" 
   },
 
+  "permissions": [
+    "activeTab"
+  ],
+
+  "browser_action": {
+    "default_title": "Make this page red"
+  },
+
   "background": {
     "scripts": ["background.js"]
   },
 
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content_script.js"]
-    }
-  ],
+
 
   "web_accessible_resources": ["hook.js"],
 
-  "devtools_page": "devtools-root.html",
-
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
+  "devtools_page": "devtools-root.html"
 }
